--- a/WebDefenseWorriors.html
+++ b/WebDefenseWorriors.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -52,10 +52,10 @@
 </head>
 <body>
     <div style="position: relative;">
-        <img src = "https://freesvg.org/img/BeagleBros-Apple-IIGS.png" alt = "PixelCompter" 
-            style="width:12.5%;height:auto;position: absolute; top: -4vh; left: 8vw;">
-        <img src = "https://static.vecteezy.com/system/resources/thumbnails/026/547/537/small/an-8-bit-retro-styled-pixel-art-illustration-of-a-green-bee-free-png.png" alt = "PixelCompter" 
-            style="width:15%;height:auto;position: absolute; top: -4vh; right: 8vw;">
+        <img src = "https://raw.githubusercontent.com/C4Claymore224/Tower-Defence-Game/refs/heads/main/Assets/Drawn%20Assets/Basic%20Tower.png?token=GHSAT0AAAAAADQMRCJFGBPOL2SUGADVC75G2JNWSPA" alt = "Basic_Tower" 
+            style="width:12.5%;height:auto;position: absolute; top: -2vh; left: 5vw;">
+        <img src = "https://raw.githubusercontent.com/C4Claymore224/Tower-Defence-Game/refs/heads/main/Assets/Drawn%20Assets/Bug.png?token=GHSAT0AAAAAADQMRCJE2MAHH46VPY26Z2LE2JNWNFQ" alt = "Bug" 
+            style="width:15%;height:auto;position: absolute; top: -10vh; right: 3vw;">
     </div>
     <h1>
         Web Defense Warriors
@@ -75,7 +75,6 @@
             </tr>
         </thead>
         <tbody>
-                  #Rank       Name        Score
             <tr><td>1</td><td>Alice</td><td>980</td></tr>
             <tr><td>2</td><td>Bob</td><td>920</td></tr>
             <tr><td>3</td><td>Charlie</td><td>890</td></tr>
@@ -86,6 +85,33 @@
             <tr><td>8</td><td>Hannah</td><td>790</td></tr>
             <tr><td>9</td><td>Ian</td><td>770</td></tr>
             <tr><td>10</td><td>Jane</td><td>750</td></tr>
+        </tbody>
+    </table>
+
+    <h2>Towers and Enemies</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>Image</th>
+                <th>Name</th>
+                <th>Description</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr><td><img src = "https://raw.githubusercontent.com/C4Claymore224/Tower-Defence-Game/refs/heads/main/Assets/Drawn%20Assets/Basic%20Tower.png?token=GHSAT0AAAAAADQMRCJFGBPOL2SUGADVC75G2JNWSPA" alt = "Basic_Tower" 
+                style="width:50%;height:auto"></td><td>Firewall</td><td>Solid Line of defense, that summons a wall of flames to scorch any bad programs</td></tr>
+            <tr><td><img src = "https://raw.githubusercontent.com/C4Claymore224/Tower-Defence-Game/refs/heads/main/Assets/Drawn%20Assets/Zap%20Tower.png?token=GHSAT0AAAAAADQMRCJFDCBSWXBRDVWO7C7Y2JNWUFA" alt = "Zap_Tower"
+                style="width:50%;height:auto"></td><td>Zap Tower</td><td>Does a thing</td></tr>
+            <tr><td>3</td><td>Tower 3</td><td>Does another thing</td></tr>
+            <tr><td>4</td><td>Tower 4</td><td>Does something else</td></tr>
+            <tr><td><img src = "https://raw.githubusercontent.com/C4Claymore224/Tower-Defence-Game/refs/heads/main/Assets/Drawn%20Assets/CPU.png?token=GHSAT0AAAAAADQMRCJFMPO3HKDJQIU7HVUW2JNWN5A" alt = "CPU"
+                style="width:50%;height=auto"></td><td>Main Computer</td><td>Is your main base. Don't let it get too infected or your computer will die</td></tr>
+            <tr><td><img src = "https://raw.githubusercontent.com/C4Claymore224/Tower-Defence-Game/refs/heads/main/Assets/Drawn%20Assets/Bug.png?token=GHSAT0AAAAAADQMRCJE2MAHH46VPY26Z2LE2JNWNFQ" alt = "Bug" 
+                style="width:50%;height:auto"></td><td>Bug</td><td>A simple bug. Easy to squash on its own, but don't let them group up</td></tr>
+            <tr><td><img src = "https://raw.githubusercontent.com/C4Claymore224/Tower-Defence-Game/refs/heads/main/Assets/Drawn%20Assets/Virus.png?token=GHSAT0AAAAAADQMRCJE6MFMQOIZJDIMMKLU2JNWPWA" alt = "Virus" 
+                style="width:50%;height:auto"></td><td>Virus</td><td>Has more health does more damage</td></tr>
+            <tr><td>8</td><td>Trojan Horse</td><td>Carries other viruses inside and releases them upon death</td></tr>
+            <tr><td>9</td><td>Another Enemy</td><td>Does a bad thing</td></tr>
         </tbody>
     </table>
 </body>
