--- a/WebDefenseWorriors.html
+++ b/WebDefenseWorriors.html
@@ -52,9 +52,9 @@
 </head>
 <body>
     <div style="position: relative;">
-        <img src = "https://raw.githubusercontent.com/C4Claymore224/Tower-Defence-Game/refs/heads/main/Assets/Drawn%20Assets/Basic%20Tower.png?token=GHSAT0AAAAAADQMRCJFGBPOL2SUGADVC75G2JNWSPA" alt = "Basic_Tower" 
+        <img src = "https://raw.githubusercontent.com/C4Claymore224/Tower-Defence-Game/main/Assets/Drawn%20Assets/Basic%20Tower.png" alt = "Basic_Tower" 
             style="width:12.5%;height:auto;position: absolute; top: -2vh; left: 5vw;">
-        <img src = "https://raw.githubusercontent.com/C4Claymore224/Tower-Defence-Game/refs/heads/main/Assets/Drawn%20Assets/Bug.png?token=GHSAT0AAAAAADQMRCJE2MAHH46VPY26Z2LE2JNWNFQ" alt = "Bug" 
+        <img src = "https://raw.githubusercontent.com/C4Claymore224/Tower-Defence-Game/main/Assets/Drawn%20Assets/Bug.png" alt = "Bug" 
             style="width:15%;height:auto;position: absolute; top: -10vh; right: 3vw;">
     </div>
     <h1>
@@ -98,17 +98,17 @@
             </tr>
         </thead>
         <tbody>
-            <tr><td><img src = "https://raw.githubusercontent.com/C4Claymore224/Tower-Defence-Game/refs/heads/main/Assets/Drawn%20Assets/Basic%20Tower.png?token=GHSAT0AAAAAADQMRCJFGBPOL2SUGADVC75G2JNWSPA" alt = "Basic_Tower" 
-                style="width:50%;height:auto"></td><td>Firewall</td><td>Solid Line of defense, that summons a wall of flames to scorch any bad programs</td></tr>
-            <tr><td><img src = "https://raw.githubusercontent.com/C4Claymore224/Tower-Defence-Game/refs/heads/main/Assets/Drawn%20Assets/Zap%20Tower.png?token=GHSAT0AAAAAADQMRCJFDCBSWXBRDVWO7C7Y2JNWUFA" alt = "Zap_Tower"
-                style="width:50%;height:auto"></td><td>Zap Tower</td><td>Does a thing</td></tr>
+            <tr><td><img src = "https://raw.githubusercontent.com/C4Claymore224/Tower-Defence-Game/main/Assets/Drawn%20Assets/Basic%20Tower.png" alt = "Basic_Tower"
+                style="width:50%;height:auto"></td><td>Firewall</td><td>Solid line of defense - Summons a wall of flames to scorch any bad programs</td></tr>
+            <tr><td><img src = "https://raw.githubusercontent.com/C4Claymore224/Tower-Defence-Game/main/Assets/Drawn%20Assets/Zap%20Tower.png" alt = "Zap_Tower"
+                style="width:50%;height:auto"></td><td>Electric Tower</td><td>Shockingly effective - Tower with small range and a faster fire rate to zap enemies away</td></tr>
             <tr><td>3</td><td>Tower 3</td><td>Does another thing</td></tr>
             <tr><td>4</td><td>Tower 4</td><td>Does something else</td></tr>
-            <tr><td><img src = "https://raw.githubusercontent.com/C4Claymore224/Tower-Defence-Game/refs/heads/main/Assets/Drawn%20Assets/CPU.png?token=GHSAT0AAAAAADQMRCJFMPO3HKDJQIU7HVUW2JNWN5A" alt = "CPU"
+            <tr><td><img src = "https://raw.githubusercontent.com/C4Claymore224/Tower-Defence-Game/main/Assets/Drawn%20Assets/CPU.png" alt = "CPU"
                 style="width:50%;height=auto"></td><td>Main Computer</td><td>Is your main base. Don't let it get too infected or your computer will die</td></tr>
-            <tr><td><img src = "https://raw.githubusercontent.com/C4Claymore224/Tower-Defence-Game/refs/heads/main/Assets/Drawn%20Assets/Bug.png?token=GHSAT0AAAAAADQMRCJE2MAHH46VPY26Z2LE2JNWNFQ" alt = "Bug" 
+            <tr><td><img src = "https://raw.githubusercontent.com/C4Claymore224/Tower-Defence-Game/main/Assets/Drawn%20Assets/Bug.png" alt = "Bug"
                 style="width:50%;height:auto"></td><td>Bug</td><td>A simple bug. Easy to squash on its own, but don't let them group up</td></tr>
-            <tr><td><img src = "https://raw.githubusercontent.com/C4Claymore224/Tower-Defence-Game/refs/heads/main/Assets/Drawn%20Assets/Virus.png?token=GHSAT0AAAAAADQMRCJE6MFMQOIZJDIMMKLU2JNWPWA" alt = "Virus" 
+            <tr><td><img src = "https://raw.githubusercontent.com/C4Claymore224/Tower-Defence-Game/main/Assets/Drawn%20Assets/Virus.png" alt = "Virus"
                 style="width:50%;height:auto"></td><td>Virus</td><td>Has more health does more damage</td></tr>
             <tr><td>8</td><td>Trojan Horse</td><td>Carries other viruses inside and releases them upon death</td></tr>
             <tr><td>9</td><td>Another Enemy</td><td>Does a bad thing</td></tr>
