--- a/WebDefenseWorriors.html
+++ b/WebDefenseWorriors.html
@@ -52,9 +52,9 @@
 </head>
 <body>
     <div style="position: relative;">
-        <img src = "https://raw.githubusercontent.com/C4Claymore224/Tower-Defence-Game/main/Assets/Drawn%20Assets/Basic%20Tower.png" alt = "Basic_Tower" 
+        <img src = "https://raw.githubusercontent.com/C4Claymore224/Tower-Defence-Game/main/Assets/Drawn%20Assets/Basic%20Tower-export.png" alt = "Basic_Tower" 
             style="width:12.5%;height:auto;position: absolute; top: -2vh; left: 5vw;">
-        <img src = "https://raw.githubusercontent.com/C4Claymore224/Tower-Defence-Game/main/Assets/Drawn%20Assets/Bug.png" alt = "Bug" 
+        <img src = "https://raw.githubusercontent.com/C4Claymore224/Tower-Defence-Game/main/Assets/Drawn%20Assets/Bug-export.png" alt = "Bug" 
             style="width:15%;height:auto;position: absolute; top: -10vh; right: 3vw;">
     </div>
     <h1>
@@ -98,19 +98,20 @@
             </tr>
         </thead>
         <tbody>
-            <tr><td><img src = "https://raw.githubusercontent.com/C4Claymore224/Tower-Defence-Game/main/Assets/Drawn%20Assets/Basic%20Tower.png" alt = "Basic_Tower"
-                style="width:60%;height:auto"></td><td>Firewall</td><td>Summons a wall of flames to scorch any bad programs</td></tr>
-            <tr><td><img src = "https://raw.githubusercontent.com/C4Claymore224/Tower-Defence-Game/main/Assets/Drawn%20Assets/Zap%20Tower.png" alt = "Zap_Tower"
-                style="width:60%;height:auto"></td><td>Electric Tower</td><td>Tower with small range and a faster fire rate to zap enemies away</td></tr>
+            <tr><td><img src = "https://raw.githubusercontent.com/C4Claymore224/Tower-Defence-Game/main/Assets/Drawn%20Assets/Basic%20Tower-export.png" alt = "Basic_Tower"
+                style="width:20%;height:auto"></td><td>Firewall</td><td>Summons a wall of flames to scorch any bad programs</td></tr>
+            <tr><td><img src = "https://raw.githubusercontent.com/C4Claymore224/Tower-Defence-Game/main/Assets/Drawn%20Assets/Zap%20Tower-export.png" alt = "Zap_Tower"
+                style="width:20%;height:auto"></td><td>Electric Tower</td><td>Tower with small range and a faster fire rate to zap enemies away</td></tr>
             <tr><td>3</td><td>Tower 3</td><td>Does another thing</td></tr>
             <tr><td>4</td><td>Tower 4</td><td>Does something else</td></tr>
             <tr><td><img src = "https://raw.githubusercontent.com/C4Claymore224/Tower-Defence-Game/main/Assets/Drawn%20Assets/CPU.png" alt = "CPU"
-                style="width:60%;height=auto"></td><td>Main Computer</td><td>Is your main base. Don't let it get too infected or your computer will die</td></tr>
-            <tr><td><img src = "https://raw.githubusercontent.com/C4Claymore224/Tower-Defence-Game/main/Assets/Drawn%20Assets/Bug.png" alt = "Bug"
-                style="width:60%;height:auto"></td><td>Bug</td><td>A simple bug. Easy to squash on its own, but don't let them group up</td></tr>
-            <tr><td><img src = "https://raw.githubusercontent.com/C4Claymore224/Tower-Defence-Game/main/Assets/Drawn%20Assets/Virus.png" alt = "Virus"
-                style="width:60%;height:auto"></td><td>Virus</td><td>Has more health does more damage</td></tr>
-            <tr><td>8</td><td>Trojan Horse</td><td>Carries other viruses inside and releases them upon death</td></tr>
+                style="width:20%;height=auto"></td><td>Main Computer</td><td>Is your main base. Don't let it get too infected or your computer will die</td></tr>
+            <tr><td><img src = "https://raw.githubusercontent.com/C4Claymore224/Tower-Defence-Game/main/Assets/Drawn%20Assets/Bug-export.png" alt = "Bug"
+                style="width:20%;height:auto"></td><td>Bug</td><td>A simple bug. Easy to squash on its own, but don't let them group up</td></tr>
+            <tr><td><img src = "https://raw.githubusercontent.com/C4Claymore224/Tower-Defence-Game/main/Assets/Drawn%20Assets/Virus-export.png" alt = "Virus"
+                style="width:20%;height:auto"></td><td>Virus</td><td>Has more health does more damage</td></tr>
+            <tr><td><img src = "https://raw.githubusercontent.com/C4Claymore224/Tower-Defence-Game/main/Assets/Drawn%20Assets/Trojin-export.png" alt = "Trojan"
+                style="width:20%;height:auto"></td><td>Trojan Horse</td><td>Carries other viruses inside and releases them upon death</td></tr>
             <tr><td>9</td><td>Another Enemy</td><td>Does a bad thing</td></tr>
         </tbody>
     </table>
