--- a/app/WebDefenseWorriors.html
+++ b/app/WebDefenseWorriors.html
@@ -47,14 +47,17 @@
         .iframe-container {
             position: relative;
             width: 100%;
-            padding-top: 56.25%; /* 16:9 Aspect Ratio */
+            padding-top: 42.86%; /* 21:9 Aspect Ratio */
+            padding-left: 10px; /* Add padding on the left */
+            padding-right: 10px; /* Add padding on the right */
             overflow: hidden;
+            box-sizing: border-box; /* Ensure padding is included in the width */
         }
         .iframe-container iframe {
             position: absolute;
             top: 0;
             left: 0;
-            width: 100%;
+            width: calc(100% - 20px); /* Adjust width to account for padding */
             height: 100%;
             border: none;
         }
