--- a/app/WebDefenseWorriors.html
+++ b/app/WebDefenseWorriors.html
@@ -1,229 +1,199 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Web Defense Warriors - A Tower Defense Game">
-    <title>Web Defense Warriors</title>
+    <!-- Metadata and styling for the Web Defense Warriors game -->
+    <meta charset="utf-8"> <!-- Specifies the character encoding -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Ensures responsive design -->
+    <meta name="description" content="Web Defense Warriors - A Tower Defense Game"> <!-- Description for SEO -->
+    <title>Web Defense Warriors</title> <!-- Title of the webpage -->
+
     <style>
+        /* Styling for the webpage */
         body {
             font-family: "Trebuchet MS", Helvetica, sans-serif;
-            background-color: #383762;
-            text-align: center;
+            background-color: #383762; /* Background color */
+            text-align: center; /* Center-align content */
         }
-        h1 {
-            font-family: Copperplate, Papyrus, fantasy;
-            font-size: 5vw;
-            color: #000;
-        }
-        h2 {
-            font-family: Copperplate, Papyrus, fantasy;
-            font-size: 2vw;
-            color: #000;
-        }
-        p {
-            font-family: Copperplate, Papyrus, fantasy;
-            font-size: 1.5vw;
-            color: #000;
+        h1, h2, p {
+            font-family: Copperplate, Papyrus, fantasy; /* Custom font for headings and paragraphs */
+            color: #000; /* Text color */
         }
         table {
-            margin: auto;
-            border-collapse: collapse;
-            width: 60%;
-            background-color: #fff;
-            box-shadow: 0 0 10vw rgba(0,0,0,0.1);
-        }
-        th, td {
-            padding: 12px;
-            border-bottom: 1px solid #ddd;
+            margin: auto; /* Center the table */
+            border-collapse: collapse; /* Remove gaps between table cells */
+            width: 60%; /* Set table width */
+            background-color: #fff; /* Table background color */
         }
         th {
-            background-color: #4CAF50;
-            color: white;
+            background-color: #4CAF50; /* Header background color */
+            color: white; /* Header text color */
         }
         tr:hover {
-            background-color: #f1f1f1;
+            background-color: #f1f1f1; /* Highlight row on hover */
         }
         .iframe-container {
-            position: relative;
-            width: 100%;
-            padding-top: 50%; /* 2:1 Aspect Ratio */
-            padding-left: 30px; /* Add padding on the left */
-            padding-right: 30px; /* Add padding on the right */
-            overflow: hidden;
-            box-sizing: border-box; /* Ensure padding is included in the width */
+            position: relative; /* Position container for responsive iframe */
+            width: 100%; /* Full width */
+            padding-top: 50%; /* Maintain aspect ratio */
         }
         .iframe-container iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: calc(100% - 30px); /* Adjust width to account for padding */
-            height: 100%;
-            border: none;
+            position: absolute; /* Position iframe inside container */
+            width: calc(100% - 30px); /* Adjust width for padding */
+            height: 100%; /* Full height */
         }
     </style>
 </head>
 <body>
-    <div style="position: relative;">
-        <img src="data/assets/Basic%20Tower-export.png" alt="Basic Tower"
-            style="width:12.5%;height:auto;position: absolute; top: -2vh; left: 5vw;">
-        <img src="data/assets/Bug-export.png" alt="Bug"
-            style="width:15%;height:auto;position: absolute; top: -10vh; right: 3vw;">
-    </div>
-    <h1>Web Defense Warriors</h1>
-    <p>Try and place in the top 10!</p>
-    <div class="iframe-container">
-        <iframe src="game/Web-Defence-Warriors.html" title="Game"></iframe>
-    </div>
+<!-- Header section with images -->
+<div style="position: relative;">
+    <img src="data/assets/Basic%20Tower-export.png" alt="Basic Tower"
+         style="width:12.5%;height:auto;position: absolute; top: -2vh; left: 5vw;">
+    <img src="data/assets/Bug-export.png" alt="Bug"
+         style="width:15%;height:auto;position: absolute; top: -10vh; right: 3vw;">
+</div>
+<h1>Web Defense Warriors</h1> <!-- Main title -->
+<p>Try and place in the top 10!</p> <!-- Subtitle -->
 
-    <h2>Submit Your Score</h2>
-    <form id="scoreForm">
-        <label for="player">Player Name:</label>
-        <input type="text" id="player" name="player" required>
-        <label for="score">Score:</label>
-        <input type="number" id="score" name="score" required min="0" max="999999">
-        <button type="submit">Submit</button>
-        <p id="formFeedback" style="color: red; display: none;">Error submitting score. Please try again.</p>
-    </form>
+<!-- Embedded game -->
+<div class="iframe-container">
+    <iframe src="game/Web-Defence-Warriors.html" title="Game"></iframe>
+</div>
 
-    <h2>🏆 Top Ten Scoreboard</h2>
-    <table>
-        <thead>
-        <tr>
-            <th>Rank</th>
-            <th>Player</th>
-            <th>Score</th>
-        </tr>
-        </thead>
-        <tbody>
-        <!-- Rows will be dynamically populated -->
-        </tbody>
-    </table>
+<!-- Form for submitting scores -->
+<h2>Submit Your Score</h2>
+<form id="scoreForm">
+    <label for="player">Player Name:</label> <!-- Input for player name -->
+    <input type="text" id="player" name="player" required>
+    <label for="score">Score:</label> <!-- Input for score -->
+    <input type="number" id="score" name="score" required min="0" max="999999">
+    <button type="submit">Submit</button> <!-- Submit button -->
+    <p id="formFeedback" style="color: red; display: none;">Error submitting score. Please try again.</p>
+</form>
 
-    <script>
-        async function loadScores() {
-            try {
-                const response = await fetch('/api/scores');
-                const data = await response.json();
+<!-- Scoreboard table -->
+<h2>🏆 Top Ten Scoreboard</h2>
+<table>
+    <thead>
+    <tr>
+        <th>Rank</th> <!-- Column for rank -->
+        <th>Player</th> <!-- Column for player name -->
+        <th>Score</th> <!-- Column for score -->
+    </tr>
+    </thead>
+    <tbody>
+    <!-- Rows will be dynamically populated -->
+    </tbody>
+</table>
 
-                if (!Array.isArray(data)) {
-                    console.error('Invalid response format:', data);
-                    throw new Error(data.error || 'Unexpected response format');
-                }
+<script>
+    // Function to load scores from the server
+    async function loadScores() {
+        try {
+            const response = await fetch('/api/scores'); // Fetch scores from API
+            const data = await response.json();
 
-                console.log('[loadScores] Scores fetched successfully:', data);
-
-                const tableBody = document.querySelector('table tbody');
-                tableBody.innerHTML = ''; // Clear existing rows
-
-                if (data.length === 0) {
-                    const row = document.createElement('tr');
-                    row.innerHTML = `
-                <td colspan="3" style="text-align: center;">No scores available</td>
-            `;
-                    tableBody.appendChild(row);
-                    return;
-                }
-
-                data.forEach((score, index) => {
-                    const row = document.createElement('tr');
-                    row.innerHTML = `
-                <td>${index + 1}</td>
-                <td>${score.player}</td>
-                <td>${score.score}</td>
-            `;
-                    tableBody.appendChild(row);
-                });
-            } catch (error) {
-                console.error('[loadScores] Error loading scores:', error.message);
+            if (!Array.isArray(data)) {
+                throw new Error(data.error || 'Unexpected response format');
             }
+
+            const tableBody = document.querySelector('table tbody');
+            tableBody.innerHTML = ''; // Clear existing rows
+
+            if (data.length === 0) {
+                const row = document.createElement('tr');
+                row.innerHTML = `<td colspan="3" style="text-align: center;">No scores available</td>`;
+                tableBody.appendChild(row);
+                return;
+            }
+
+            // Populate table with scores
+            data.forEach((score, index) => {
+                const row = document.createElement('tr');
+                row.innerHTML = `<td>${index + 1}</td><td>${score.player}</td><td>${score.score}</td>`;
+                tableBody.appendChild(row);
+            });
+        } catch (error) {
+            console.error('[loadScores] Error loading scores:', error.message);
         }
+    }
 
-        document.getElementById('scoreForm').addEventListener('submit', async (event) => {
-            event.preventDefault();
+    // Event listener for submitting scores
+    document.getElementById('scoreForm').addEventListener('submit', async (event) => {
+        event.preventDefault();
 
-            const player = document.getElementById('player').value;
-            const score = document.getElementById('score').value;
-            console.log('[submitScore] Submitting score:', { player, score });
+        const player = document.getElementById('player').value;
+        const score = document.getElementById('score').value;
 
-            const feedback = document.getElementById('formFeedback');
+        const feedback = document.getElementById('formFeedback');
 
-            try {
-                const response = await fetch('/api/scores', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ player, score }),
-                });
+        try {
+            const response = await fetch('/api/scores', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ player, score }),
+            });
 
-                if (response.ok) {
-                    console.log('[submitScore] Score submitted successfully.');
-                    loadScores();
-                    event.target.reset();
-                    feedback.style.display = 'none';
-                } else {
-                    console.error('[submitScore] Failed to submit score. HTTP Status:', response.status);
-                    feedback.style.display = 'block';
-                }
-            } catch (error) {
-                console.error('[submitScore] Error submitting score:', error.message);
-                feedback.style.display = 'block';
+            if (response.ok) {
+                loadScores(); // Reload scores after submission
+                event.target.reset(); // Reset form
+                feedback.style.display = 'none';
+            } else {
+                feedback.style.display = 'block'; // Show error feedback
             }
-        });
+        } catch (error) {
+            feedback.style.display = 'block'; // Show error feedback
+        }
+    });
 
-        // Load scores when the page loads
-        window.onload = () => {
-            console.log('[window.onload] Loading scores...');
-            loadScores();
-        };
-    </script>
+    // Load scores when the page loads
+    window.onload = () => {
+        loadScores();
+    };
+</script>
 
-    <h2>Towers and Enemies</h2>
-    <table>
-        <thead>
-            <tr>
-                <th>Image</th>
-                <th>Name</th>
-                <th>Description</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td><img src="data/assets/Basic%20Tower-export.png" alt="Basic Tower"
-                    style="width:20%;height:auto"></td>
-                <td>Firewall</td>
-                <td>Summons a wall of flames to scorch any bad programs</td>
-            </tr>
-            <tr>
-                <td><img src="data/assets/Zap%20Tower-export.png" alt="Zap Tower"
-                    style="width:20%;height:auto"></td>
-                <td>Electric Tower</td>
-                <td>Tower with small range and a faster fire rate to zap enemies away</td>
-            </tr>
-            <tr>
-                <td><img src="data/assets/CPU.png" alt="CPU"
-                    style="width:20%;height:auto"></td>
-                <td>Main Computer</td>
-                <td>Is your main base. Don't let it get too infected or your computer will die</td>
-            </tr>
-            <tr>
-                <td><img src="data/assets/Bug-export.png" alt="Bug"
-                    style="width:20%;height:auto"></td>
-                <td>Bug</td>
-                <td>A simple bug. Easy to squash on its own, but don't let them group up</td>
-            </tr>
-            <tr>
-                <td><img src="data/assets/Virus-export.png" alt="Virus"
-                    style="width:20%;height:auto"></td>
-                <td>Virus</td>
-                <td>Has more health and does more damage</td>
-            </tr>
-            <tr>
-                <td><img src="data/assets/Trojin-export.png" alt="Trojan Horse"
-                    style="width:20%;height:auto"></td>
-                <td>Trojan Horse</td>
-                <td>Carries other viruses inside and releases them upon death</td>
-            </tr>
-        </tbody>
-    </table>
+<!-- Table for displaying towers and enemies -->
+<h2>Towers and Enemies</h2>
+<table>
+    <thead>
+    <tr>
+        <th>Image</th> <!-- Column for image -->
+        <th>Name</th> <!-- Column for name -->
+        <th>Description</th> <!-- Column for description -->
+    </tr>
+    </thead>
+    <tbody>
+    <!-- Rows for towers and enemies -->
+    <tr>
+        <td><img src="data/assets/Basic%20Tower-export.png" alt="Basic Tower" style="width:20%;height:auto"></td>
+        <td>Firewall</td>
+        <td>Summons a wall of flames to scorch any bad programs</td>
+    </tr>
+    <tr>
+        <td><img src="data/assets/Zap%20Tower-export.png" alt="Zap Tower" style="width:20%;height:auto"></td>
+        <td>Electric Tower</td>
+        <td>Tower with small range and a faster fire rate to zap enemies away</td>
+    </tr>
+    <tr>
+        <td><img src="data/assets/CPU.png" alt="CPU" style="width:20%;height:auto"></td>
+        <td>Main Computer</td>
+        <td>Is your main base. Don't let it get too infected or your computer will die</td>
+    </tr>
+    <tr>
+        <td><img src="data/assets/Bug-export.png" alt="Bug" style="width:20%;height:auto"></td>
+        <td>Bug</td>
+        <td>A simple bug. Easy to squash on its own, but don't let them group up</td>
+    </tr>
+    <tr>
+        <td><img src="data/assets/Virus-export.png" alt="Virus" style="width:20%;height:auto"></td>
+        <td>Virus</td>
+        <td>Has more health and does more damage</td>
+    </tr>
+    <tr>
+        <td><img src="data/assets/Trojin-export.png" alt="Trojan Horse" style="width:20%;height:auto"></td>
+        <td>Trojan Horse</td>
+        <td>Carries other viruses inside and releases them upon death</td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
